--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js"
   },
   "name": "@hexlet/code",
   "type": "module",
@@ -22,6 +24,7 @@
   },
   "homepage": "https://github.com/2Fanik2/frontend-project-44#readme",
   "dependencies": {
+    "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
